# SmartWorkPlan

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/: CONTRIBUTING.md
cmake/: basic_configuration_functions.cmake  path.cmake  setup_catch2.cmake
cmake/paths_to_cmake/header_files_paths/: h_controllers_helpers.cmake  h_controllers_paths.cmake  h_models_paths.cmake  h_widgets_paths.cmake
cmake/paths_to_cmake/source_files_paths/: s_controllers_helpers.cmake  s_controllers_paths.cmake  s_models_paths.cmake  s_widgets_paths.cmake
docs/: ReadMe.md  RoadMap.md  VERSION.md
docs/ProjectConvention/: CommitConventions.md  NamingConventions.md
docs/class/controllers/: docs_printcontroller.md  docs_shiftcontroller.md  docs_workercontroller.md
docs/class/models/: docs_printmodel.md  docs_shiftdatamodel.md  docs_shiftmodel.md  docs_workerdatamodel.md  docs_workermodel.md
docs/class/widgets/: docs_calendarfieldwidget.md  docs_calendarwidget.md  docs_shiftwizard.md  docs_workersremovaldialog.md  docs_workerwidget.md  docs_workerwizard.md
docs/docs_class/docs_controller/: docs_printcontroller.md  docs_shiftcontroller.md  docs_workercontroller.md
docs/docs_class/docs_models/: docs_datamodel.md  docs_printmodel.md  docs_shiftmodel.md  docs_workermodel.md
docs/docs_class/docs_widgets/: docs_calendarfieldwidget.md  docs_calendarwidget.md  docs_shiftwizard.md  docs_workerwidget.md  docs_workerwizard.md
docs/git/: commit_conventions.md
frontend/: calendarfieldwidget.ui  calendarwidget.ui  mainwindow.ui  shiftremovaldialog.ui  shiftwizard.ui  workersremovaldialog.ui  workerwidget.ui
include/: DependencyManager.hpp  dependencymanager.hpp  mainwindow.hpp
include/DepedencyManagerHelpers/: DependencyShiftManager.hpp  DependencyWorkerManager.hpp
include/controllers/: PrintController.hpp  ShiftController.hpp  WorkerController.hpp  printcontroller.hpp  shiftcontroller.hpp  workercontroller.hpp
include/depmanagerhelpers/: dependencyshiftmanager.hpp  dependencyworkermanager.hpp
include/models/: PrintModel.hpp  ShiftModel.hpp  WorkerModel.hpp  datamodel.hpp  printmodel.hpp  shiftdatamodel.hpp  shiftmodel.hpp  workerdatamodel.hpp  workermodel.hpp
include/widgets/: CalendarFieldWidget.hpp  CalendarWidget.hpp  LicenseInformationWidget.hpp  ShiftWizard.hpp  WorkerWidget.hpp  WorkerWizard.hpp  calendarfieldwidget.hpp  calendarwidget.hpp  shiftwizard.hpp  workerwidget.hpp  workerwizard.hpp
src/: DependencyManager.cpp  MainWindow.cpp  dependencymanager.cpp  main.cpp  mainwindow.cpp
src/DepedencyManagerHelpers/: DependencyShiftManager.cpp  DependencyWorkerManager.cpp
src/controllers/: PrintController.cpp  ShiftController.cpp  WorkerController.cpp  printcontroller.cpp  shiftcontroller.cpp  workercontroller.cpp
src/depmanagerhelpers/: dependencyshiftmanager.cpp  dependencyworkermanager.cpp
src/frontend/: calendarfieldwidget.ui  calendarwidget.ui  licenseinformationwidget.ui  mainwindow.ui  shiftremovaldialog.ui  shiftwizard.ui  workersremovaldialog.ui  workerwidget.ui  workerwizard.ui
src/models/: DataModel.cpp  PrintModel.cpp  ShiftModel.cpp  WorkerModel.cpp  datamodel.cpp  printmodel.cpp  shiftdatamodel.cpp  shiftmodel.cpp  workerdatamodel.cpp  workermodel.cpp
src/widgets/: CalendarFieldWidget.cpp  CalendarWidget.cpp  LicenseInformationWidget.cpp  ShiftWizard.cpp  WorkerWidget.cpp  WorkerWizard.cpp  calendarfieldwidget.cpp  calendarwidget.cpp  shiftwizard.cpp  workersremovaldialog.cpp  workerwidget.cpp  workerwizard.cpp
test/: test_datamodel.cc  test_main.cc  test_shiftmodel.cc  test_workerdatamodel.cc  test_workermodel.cc
(+17 files in other folders)
